--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:15
+    container_name: keycloak_db
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak_password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: no  # 再起動しない
+
   keycloak:
     image: keycloak/keycloak:latest
     container_name: keycloak
@@ -9,5 +22,16 @@ services:
     environment:
       KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
-    command: start-dev
-    restart: unless-stopped
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://db:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: keycloak_password
+    command: start-dev --hostname=${NGROK_HOSTNAME} --hostname-admin=${NGROK_HOSTNAME_ADMIN}
+    env_file:
+      - .env
+    depends_on:
+      - db
+    restart: no  # 再起動しない
+
+volumes:
+  postgres_data:
