--- a/terraform/terraform.tfvars.sample
+++ b/terraform/terraform.tfvars.sample
@@ -1,2 +1,4 @@
+#vpc_cidr         = "" # デフォルトで 10.1.0.0/16 にしている
 allowed_ssh_cidr = "xxx.xxx.xxx.xxx/32"
 key_name         = "your-keypair-name"
+domain_name      = "keycloak.example.com"
