--- a/terraform/terraform.tfvars.sample
+++ b/terraform/terraform.tfvars.sample
@@ -1,4 +1,13 @@
-#vpc_cidr         = "" # デフォルトで 10.1.0.0/16 にしている
-allowed_ssh_cidr = "xxx.xxx.xxx.xxx/32"
-key_name         = "your-keypair-name"
-domain_name      = "keycloak.example.com"
+#vpc_cidr               = "" # デフォルトで 10.1.0.0/16 にしている
+
+# Amazon Linux 2023 AMI
+ami_id                  = "ami-0e04e5593e034f7eb"
+
+# 自宅のグローバルIPなど
+allowed_ssh_cidr        = "xxx.xxx.xxx.xxx/32"
+key_name                = "your-keypair-name"
+domain_name             = "keycloak.example.com"
+
+# keycloakの管理ユーザのID/パスワード
+keycloak_admin          = "admin"
+keycloak_admin_password = "your_secure_password"
